bench(valhalla): port scenario benchmarks, report JEP 401 EA numbers
Add Valhalla value-record variants of ParticleScenarioBenchmark,
SparseDeltaBenchmark and RealisticTickBenchmark to the existing
ecs-benchmark-valhalla module. All three use `value record` components
for {Position, Velocity, Health, Mana, ...} so the backing component
storage can be flattened under JEP 401.

Run all five Valhalla scenario benchmarks against Valhalla EA build
`openjdk 27-jep401ea3` and fold the results into the README under a new
"Does Valhalla help?" subsection. The honest answer is: "10% win on
allocation-heavy linear loops, zero-to-negative win on change-detection
scenarios."

Meaningful numbers (us/op, stock japes vs japes on Valhalla JVM with
value records):

  iterateWithWrite  10k  | 57.3 -> 51.6  (+10%, real)
  NBody simulateOneTick  |
    1k                   |  6.26 ->  5.77 (+8%, real)
    10k                  | 62.6  -> 57.0  (+9%, real)
  NBody simulateTenTicks |
    10k                  | 625   -> 573   (+8%, real)
  ParticleScenario tick  | 161   -> 184   (-14%)
  SparseDelta tick       |  5.22 ->  5.05 (noise)
  RealisticTick st       | 16.4  -> 22.1  (-35%)
  RealisticTick mt       | 21.5  -> 27.9  (-30%)

Important caveat called out in the README: the read-only iteration
benchmarks (iterateSingleComponent, iterateTwoComponents) show
apparent 20-51x speedups for Valhalla, but those are dead-code
elimination artifacts. Their system methods have empty bodies
(`void iterate(@Read Position p) {}`), and value-record loads into
unused locals are trivially eliminable by the JIT. 0.73 us for 100k
entity reads is ~7 ps/entity which is physically impossible; the JIT
deleted the loop entirely. Those rows are labelled "(DCE)" in the
table and are not a real win.

The scenario regressions are consistent with the tier-1 generator and
ChangeTracker bookkeeping being built around reference semantics;
JEP 401 is EA and the JIT's value-layout support is still maturing.
The shape of t